[gd_scene load_steps=24 format=3 uid="uid://cr4137xbkxflx"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_k081i"]
[ext_resource type="Texture2D" uid="uid://dy5aymae65srm" path="res://assets/tinamy/move_right/Tinamy_v01.png" id="2_i1gvg"]
[ext_resource type="PackedScene" uid="uid://rcvad2ldy5o1" path="res://scenes/components/gravity/gravity_component.tscn" id="2_jwooe"]
[ext_resource type="PackedScene" uid="uid://dcnqawbt1nish" path="res://scenes/components/input/input_component.tscn" id="3_r1isv"]
[ext_resource type="PackedScene" uid="uid://c1xdlmcoefm1d" path="res://scenes/components/move/movement_component.tscn" id="4_hovol"]
[ext_resource type="PackedScene" uid="uid://tr8nhovbawby" path="res://scenes/components/animation/animation_component.tscn" id="6_w2df7"]
[ext_resource type="PackedScene" uid="uid://cv24phuoha88f" path="res://scenes/components/advanced_jump/variable_height_jump_component.tscn" id="7_y8fql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xlxoa"]
atlas = ExtResource("2_i1gvg")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymtbu"]
atlas = ExtResource("2_i1gvg")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bghp"]
atlas = ExtResource("2_i1gvg")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76l4r"]
atlas = ExtResource("2_i1gvg")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8r7d"]
atlas = ExtResource("2_i1gvg")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0irc"]
atlas = ExtResource("2_i1gvg")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khygy"]
atlas = ExtResource("2_i1gvg")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2qg6"]
atlas = ExtResource("2_i1gvg")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_town2"]
atlas = ExtResource("2_i1gvg")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kau0u"]
atlas = ExtResource("2_i1gvg")
region = Rect2(384, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pw7v"]
atlas = ExtResource("2_i1gvg")
region = Rect2(432, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecd0k"]
atlas = ExtResource("2_i1gvg")
region = Rect2(480, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_866gb"]
atlas = ExtResource("2_i1gvg")
region = Rect2(528, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu5sn"]
atlas = ExtResource("2_i1gvg")
region = Rect2(576, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xjla"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlxoa")
}],
"loop": false,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymtbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bghp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76l4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8r7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0irc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2qg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_town2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kau0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pw7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecd0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_866gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu5sn")
}],
"loop": true,
"name": &"move",
"speed": 25.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yrkk1"]
radius = 8.0
height = 55.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("camera", "gravity_component", "input_component", "movement_component", "jump_component", "animation_component")]
collision_mask = 2
script = ExtResource("1_k081i")
camera = NodePath("PlayerCamera")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("VariableHeightJumpComponent")
animation_component = NodePath("AnimationComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_5xjla")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yrkk1")

[node name="GravityComponent" parent="." instance=ExtResource("2_jwooe")]

[node name="InputComponent" parent="." instance=ExtResource("3_r1isv")]

[node name="MovementComponent" parent="." instance=ExtResource("4_hovol")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_w2df7")]
sprite = NodePath("../AnimatedSprite2D")

[node name="VariableHeightJumpComponent" parent="." instance=ExtResource("7_y8fql")]

[node name="PlayerCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.8
drag_vertical_offset = -0.6
